# yt-rag-assistant

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  template.py
backend/api/: main.py
backend/api/routers/: health.py  qa.py  summarize.py
src/a2a/: agent_card.py
src/agents/: mcp_tool_agent.py  orchestrator.py  rag_agent.py  summary_agent.py  transciptor_agent.py  transcriptor_agent.py
src/core/: config.py  embeddings.py  llm.py  state.py
src/evaluation/: ragas_eval.py  synthetic_testset.py
src/exceptions/: custom_exception.py
src/logger/: custom_logger.py
src/tests/: test_mcp_tool_agent.py  test_orchestrator_agent.py  test_rag_agent.py  test_summary_agent.py  test_transcriptor_agent.py
